--- a/Microlife/Info.plist
+++ b/Microlife/Info.plist
@@ -55,7 +55,23 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSBluetoothPeripheralUsageDescription</key>
-	<string>YES</string>
+	<string>You will use a Bluetooth device to connect your device</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>You will use a Microphone</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We will get your loaction data for fitness.</string>
+	<key>NSLocationUsageDescription</key>
+	<string>We will get your loaction data for fitness.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We will get your loaction data for fitness.</string>
+	<key>NSHealthShareUsageDescription</key>
+	<string>You will share fitness data to Health Kit</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>You will share fitness data to Health Kit</string>
+	<key>NSCameraUsageDescription</key>
+	<string>You will use the camera to take pictures will be used for personal data.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Your photos will be used for personal data.</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.1075601993941-b70ihq5e0gqmpp0eelfsbaup1nqcsjv2</string>
 	<key>UILaunchStoryboardName</key>
@@ -69,6 +85,7 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
